# QuizletTesting

./: .nvim.lua  .stylua.toml  CMakeLists.txt  hotkey.cpp  image1.bgra  image1.gray  ocr.cpp  resize.cpp  screenshot.cpp  text1.txt  text2.txt  text3.txt
