cmake_minimum_required(VERSION 3.10)

project(QuizletTesting)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(WIN32)
  add_executable(screenshot screenshot.cpp)
endif()

add_executable(resize resize.cpp)

add_executable(ocr ocr.cpp)
target_link_libraries(ocr PRIVATE tesseract leptonica)
